Arreglando lo de la reinstalada

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,6 +1,6 @@
 
 <h1 class="text-center mt-4">Listing all articles</h1>
-<div class="container" style="height: 100%">
+<div class="container" style="height: auto">
   <% @articles.each do |article| %>
     <div class="row justify-content-center ">
       <div class="col-8 mt-4">
