--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,7 +3,7 @@
     <div class="row justify-content-center ">
         <div class="col-8 mt-4">
             <div class="card text-center shadow mb-5 bg-white rounded">
-                <div class="card-header">by Daniel Carrillo</div>
+                <div class="card-header">by <%= @article.user.username if @article.user %> </div>
                 <div class="card-body">
                     <div class="card-text text-left"><%= simple_format(@article.description) %></div>
                         <%= link_to "Edit", edit_article_path(@article), class: "btn btn-outline-warning"%>
