--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -70,3 +70,53 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
+
+.pagination {
+  justify-content: center;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
+.prev {
+  background-color: rgb(0, 153, 255) !important;
+  margin-right: 20px !important;
+  padding: 10px 20px 10px 20px !important;
+  color: white !important;
+  border-radius: 10px !important;
+}
+
+.prev a {
+  text-decoration: none !important;
+  color: white !important;
+}
+
+.next {
+  background-color: rgb(0, 153, 255) !important;
+  margin-left: 20px !important;
+  padding: 10px 20px 10px 20px !important;
+  color: white !important;
+  border-radius: 10px !important;
+}
+
+.next a {
+  text-decoration: none !important;
+  color: white !important;
+}
+
+.page {
+  background-color: rgb(255, 255, 255);
+  margin-right: 10px;
+  margin-left: 10px;
+  padding: 10px 10px 10px 10px;
+  border-radius: 10px;
+}
+
+.page a {
+  color: rgb(0, 0, 0);
+  text-decoration: none !important;
+}
+
+.active {
+  background-color: rgb(0, 153, 255) !important;
+  color: white;
+}
