--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,5 +1,5 @@
 <% if @articles.any? %>
-    <div class="container" style="height: auto">
+    <div class="container"  style="<%= @articles.count > 3 ? 'height: auto' : 'height: 100%' %>">
         <% @articles.each do |article| %>
             <div class="row justify-content-center ">
             <div class="col-8 mt-4">
