--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,10 @@
 <h1 class="text-center mt-4">Alpha Bloggers</h1>
 
+<nav>
+  <ul class="pagination justify-content-center">
+    <%== pagy_nav(@pagy) %>
+  </ul>
+</nav>
 
 <% if @users.any? %>
     <div class="container" style="height: auto">
@@ -29,3 +34,9 @@
         <h3 class="text-center">There are no blogger to display</h3>
     </div>
 <% end %>
+
+<nav>
+  <ul class="pagination justify-content-center">
+    <%== pagy_nav(@pagy) %>
+  </ul>
+</nav>
