--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,4 +8,15 @@
 <h3 class="text-center mt-4">Articles</h3>
 </div>
 
+<nav>
+  <ul class="pagination justify-content-center">
+    <%== pagy_nav(@pagy) %>
+  </ul>
+</nav>
 <%= render 'articles/article' %>
+
+<nav>
+  <ul class="pagination justify-content-center">
+    <%== pagy_nav(@pagy) %>
+  </ul>
+</nav>
