--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -13,8 +13,10 @@
                     <h5 class="card-title"><%= link_to article.title, article_path(article), class: "card-t text-success"%></h5>
                     <p class="card-text"><%= truncate(article.description, length: 100) %></p>
                     <%= link_to "View", article_path(article), class: "btn btn-outline-success"%>
+                    <% if logged_in? && article.user == current_user %>
                     <%= link_to "Edit", edit_article_path(article), class: "btn btn-outline-warning"%>
                     <%= link_to "Delete", article_path(article), method: :delete, data: { confirm: "Are you sure?"}, class: "btn btn-outline-danger"%> 
+                    <% end %>
                 </div>
                 <div class="card-footer text-body-secondary">
                     <small>Created <%= time_ago_in_words(article.created_at) %> ago, edited <%= time_ago_in_words(article.updated_at) %> ago</small>
